# rust_http_serv

./: .gitignore
HTTP_serv/: .project  Cargo.toml
HTTP_serv/src/: Unsaved_1.glade  Unsaved_2.glade  main.rs  server.rs
