[package]
name = "HTTP_serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
path = "/usr/share/cargo/registry/gtk-0.14.3"
#[dependencies.gtksys]
#path = "/usr/share/cargo/registry/gtk4-sys-0.3.1"
#path = "/usr/share/cargo/registry/gtk-sys-0.14.0"

